--- a/outputs/paper/references.bib
+++ b/outputs/paper/references.bib
@@ -8,67 +8,63 @@
     year = {2023},
     url = {https://www.R-project.org/},
   }
+
+@Manual{tidyverse,
+  title = {tidyverse: Easily Install and Load the 'Tidyverse'},
+  author = {Hadley Wickham and Mara Averick and others},
+  year = {2024},
+  note = {R package version 2.0.0},
+  url = {https://CRAN.R-project.org/package=tidyverse},
+  }
+
+@Manual{ggplot2,
+  title = {ggplot2: Create Elegant Data Visualisations Using the Grammar of Graphics},
+  author = {Hadley Wickham and others},
+  year = {2024},
+  note = {R package version 3.5.0},
+  url = {https://CRAN.R-project.org/package=ggplot2},
+  }
+
+@Manual{dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and others},
+  year = {2024},
+  note = {R package version 1.1.4},
+  url = {https://CRAN.R-project.org/package=dplyr},
+  }
+
+@Manual{readr,
+  title = {readr: Read Rectangular Text Data},
+  author = {Hadley Wickham and Jim Hester and others},
+  year = {2024},
+  note = {R package version 2.1.5},
+  url = {https://CRAN.R-project.org/package=readr},
+  }
+	
+@Manual{testthat,
+  title = {testthat: Unit Testing for R},
+  author = {Hadley Wickham and others},
+  year = {2024},
+  note = {R package version 3.2.1},
+  url = {https://CRAN.R-project.org/package=testthat},
+  }
+
+@Manual{here,
+  title = {here: A Simpler Way to Find Your Files},
+  author = {Kirill Müller},
+  year = {2024},
+  note = {R package version 1.0.1},
+  url = {https://CRAN.R-project.org/package=here},
+  }
   
-  
-@Article{thereferencecanbewhatever,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
-  
-@Manual{citeLahman,
-    title = {Lahman: Sean `Lahman' Baseball Database},
-    author = {Michael Friendly and Chris Dalzell and Martin Monkman and Dennis Murphy},
-    year = {2020},
-    note = {R package version 8.0-0},
-    url = {https://CRAN.R-project.org/package=Lahman},
-  }  
-  
-  
-@article{gebru2021datasheets,
-  title={Datasheets for datasets},
-  author={Gebru, Timnit and Morgenstern, Jamie and Vecchione, Briana and Vaughan, Jennifer Wortman and Wallach, Hanna and Iii, Hal Daum{\'e} and Crawford, Kate},
-  journal={Communications of the ACM},
-  volume={64},
-  number={12},
-  pages={86--92},
-  year={2021},
-  publisher={ACM New York, NY, USA}
+@Misc{opendatatoronto,
+  title = {Open Data Toronto},
+  howpublished = {\url{https://open.toronto.ca/}},
+  year = {2024},
+  note = {Accessed: 23 September 2024},
 }
 
-@Misc{rstanarm,
-    title = {rstanarm: {Bayesian} applied regression modeling via {Stan}},
-    author = {Ben Goodrich and Jonah Gabry and Imad Ali and Sam Brilleman},
-    note = {R package version 2.21.3},
-    year = {2022},
-    url = {https://mc-stan.org/rstanarm/},
-  }
-  
-@Manual{palmerpenguins,
-    title = {palmerpenguins: Palmer Archipelago (Antarctica) penguin data},
-    author = {Allison Marie Horst and Alison Presmanes Hill and Kristen B Gorman},
-    year = {2020},
-    note = {R package version 0.1.0},
-    doi = {10.5281/zenodo.3960218},
-    url = {https://allisonhorst.github.io/palmerpenguins/},
-  }
   
   
-@Article{rohan,
-    title = {Welcome to the {tidyverse}},
-    author = {Hadley Wickham and Mara Averick and Jennifer Bryan and Winston Chang and Lucy D'Agostino McGowan and Romain François and Garrett Grolemund and Alex Hayes and Lionel Henry and Jim Hester and Max Kuhn and Thomas Lin Pedersen and Evan Miller and Stephan Milton Bache and Kirill Müller and Jeroen Ooms and David Robinson and Dana Paige Seidel and Vitalie Spinu and Kohske Takahashi and Davis Vaughan and Claus Wilke and Kara Woo and Hiroaki Yutani},
-    year = {2019},
-    journal = {Journal of Open Source Software},
-    volume = {4},
-    number = {43},
-    pages = {1686},
-    doi = {10.21105/joss.01686},
-  }  
-  
+
   
